--- a/Apunts.tex
+++ b/Apunts.tex
@@ -1,5 +1,5 @@
 %\RequirePackage[l2tabu, orthodox]{nag}
-\documentclass[10pt, a4paper, openright]{memoir}
+\documentclass[10pt, a4paper, openright, final]{memoir}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[catalan]{babel}
